[gd_scene load_steps=4 format=2]

[ext_resource path="res://AtividadeSemana5.gd" type="Script" id=1]
[ext_resource path="res://Roboto-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[node name="AtividadeSemana5" type="Node2D"]
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 409.0
margin_top = 54.0
margin_right = 588.0
margin_bottom = 121.0

[node name="Button" type="Button" parent="."]
margin_left = 312.0
margin_top = 184.0
margin_right = 424.0
margin_bottom = 232.0
text = "Botao 1"

[node name="Button2" type="Button" parent="."]
margin_left = 448.0
margin_top = 184.0
margin_right = 560.0
margin_bottom = 232.0
text = "Botao 2"

[node name="Button3" type="Button" parent="."]
margin_left = 584.0
margin_top = 184.0
margin_right = 696.0
margin_bottom = 232.0
text = "Botao 3"

[node name="Label" type="Label" parent="."]
margin_left = 304.0
margin_top = 128.0
margin_right = 432.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 1 )

[node name="Label2" type="Label" parent="."]
margin_left = 568.0
margin_top = 128.0
margin_right = 696.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 1 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
